// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Featured item Default renders correctly 1`] = `
<jest>
  <article
    class="ecl-featured-item"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <figure
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <img
            alt="Lorem ipsum dolor sit amet"
            class="ecl-media-container__media"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-media-container__caption"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </figcaption>
        </figure>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
        >
          Title
        </div>
        <div
          class="ecl-featured-item__description"
        >
          <p
            class="ecl-u-type-paragraph-m"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </p>
        </div>
        <a
          aria-label="Read more about the Standalone link"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Standalone link
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#external"
            />
          </svg>
        </a>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item Extended renders correctly 1`] = `
<jest>
  <article
    class="ecl-featured-item ecl-featured-item--extended"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <figure
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <img
            alt="Lorem ipsum dolor sit amet"
            class="ecl-media-container__media"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-media-container__caption"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </figcaption>
        </figure>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
        >
          Title
        </div>
        <div
          class="ecl-featured-item__description"
        >
          <p
            class="ecl-u-type-paragraph-m"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </p>
        </div>
        <a
          aria-label="Read more about the CTA"
          class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            CTA
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#external"
            />
          </svg>
        </a>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-featured-item"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <figure
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <img
            alt="Lorem ipsum dolor sit amet"
            class="ecl-media-container__media"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-media-container__caption"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </figcaption>
        </figure>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
        >
          Title
        </div>
        <div
          class="ecl-featured-item__description"
        >
          <p
            class="ecl-u-type-paragraph-m"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </p>
        </div>
        <a
          aria-label="Read more about the Standalone link"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Standalone link
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#external"
            />
          </svg>
        </a>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-featured-item custom-class custom-class--test"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <figure
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <img
            alt="Lorem ipsum dolor sit amet"
            class="ecl-media-container__media"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
          />
          <figcaption
            class="ecl-media-container__caption"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </figcaption>
        </figure>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
        >
          Title
        </div>
        <div
          class="ecl-featured-item__description"
        >
          <p
            class="ecl-u-type-paragraph-m"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </p>
        </div>
        <a
          aria-label="Read more about the Standalone link"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Standalone link
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xs ecl-link__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#external"
            />
          </svg>
        </a>
      </div>
    </div>
  </article>
</jest>
`;
